--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_script:
   - sudo apt-get update
   - sudo apt-get install xsltproc
   - mkdir tmp
-  - xsltproc src/jats-to-bibtex.xsl tests/fixtures/jats/00288.xml
-  - xsltproc src/jats-to-ris.xsl tests/fixtures/jats/00288.xml
+  - xsltproc src/jats-to-bibtex.xsl tests/fixtures/jats/00288.xml > tmp/00288.bib
+  - xsltproc src/jats-to-ris.xsl tests/fixtures/jats/00288.xml > tmp/00288.ris
 
 script: phpunit --verbose -c tests/phpunit.xml
