--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,15 @@
 language: php
 
 php:
-  - 5.5
+  - 5.6
 
 before_script:
   - sudo apt-get update
   - sudo apt-get install xsltproc
-  - mkdir tmp
-  - xsltproc src/jats-to-bibtex.xsl tests/fixtures/jats/00288.xml > tmp/00288.bib
-  - xsltproc src/jats-to-ris.xsl tests/fixtures/jats/00288.xml > tmp/00288.ris
 
-  - find tmp -name "*.bib" -exec cat {} \;
-  - find tmp -name "*.ris" -exec cat {} \;
+  - ./tests/generation_citation_formats.sh
+
+  # Output citation formats grouped by format
+  - for ext in $(find tests/tmp -type f -name "*.*" | awk -F. '!a[$NF]++{print $NF}'); do find tests/tmp -name "*.$ext" -exec cat {} \;; done
 
 script: phpunit --verbose -c tests/phpunit.xml
