--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,18 @@ matrix:
     - php: nightly
     - php: hhvm
 
-before_install:
-  - composer self-update
+## Run on container environment
+sudo: false
+
+## Cache composer bits
+cache:
+  directories:
+    - vendor
+    - $HOME/.composer/cache
 
 install:
-  - composer install --prefer-source --no-interaction
+  - travis_retry composer self-update && composer --version
+  - travis_retry composer install --prefer-dist --no-interaction
 
 script:
   - ./bin/phpspec run --format=pretty
