--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,7 @@
   "require-dev": {
     "phpspec/phpspec": "~2.2",
     "phpunit/phpunit": "~4.7",
-    "symfony/var-dumper": "^2.7",
-    "zaininnari/html-minifier": "~0.4"
+    "symfony/var-dumper": "^2.7"
   },
   "autoload": {
     "psr-4": {
@@ -28,11 +27,5 @@
   },
   "config": {
     "bin-dir": "./bin"
-  },
-  "repositories": [
-    {
-      "type": "vcs",
-      "url": "https://github.com/zaininnari/html-minifier"
-    }
-  ]
+  }
 }
