--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,7 @@
   },
   "require-dev": {
     "phpspec/phpspec": "~2.2",
-    "phpunit/phpunit": "~4.7",
-    "symfony/var-dumper": "^2.7"
+    "phpunit/phpunit": "~4.7"
   },
   "autoload": {
     "psr-4": {
