--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
   "type": "library",
   "require": {
     "php": ">=5.5",
-    "beberlei/assert": "~2.3"
+    "beberlei/assert": "~2.3",
+    "symfony/process": "~2.7"
   },
   "require-dev": {
     "phpspec/phpspec": "~2.2",
