Update article xml

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "elife-ingest-xsl",
   "dependencies": {
-    "elife-eif-schema": "git@github.com:elifesciences/elife-eif-schema.git"
+    "elife-eif-schema": "https://github.com/elifesciences/elife-eif-schema.git"
   }
 }
