--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "require": {
     "php": ">=5.5",
     "beberlei/assert": "~2.3",
-    "symfony/process": "~2.7"
+    "symfony/process": "~2.7|~3.0"
   },
   "require-dev": {
     "phpspec/phpspec": "~2.2",
