--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,10 @@
     "php": ">=5.5",
     "beberlei/assert": "~2.3",
     "symfony/process": "~2.7|~3.0",
-    "elifesciences/elife-eif-schema": "dev-master"
+    "elifesciences/elife-eif-schema": "dev-master",
+    "league/html-to-markdown": "^4.4",
+    "league/commonmark": "^0.15.6",
+    "jimmiw/php-time-ago": "^2.0"
   },
   "require-dev": {
     "phpspec/phpspec": "~2.2",
